Tweaks to dark mode colors of normal dialog buttons (part of issue #264)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -128,23 +128,23 @@ button.default {
 }
 
 button:hover {
-    background-color: rgba(12, 12, 13, 0.2);
     border: 1px solid rgba(12, 12, 13, 0.2) !important;
+    background-color: var(--color-btn-hover-bkgd);
 }
 
 button.default:hover {
-    background-color: #003eaa;
     border: 1px solid #003eaa;
+    background-color: #003eaa;
 }
 
 button:active {
-    background-color: rgba(12, 12, 13, 0.3);
     border: 1px solid rgba(12, 12, 13, 0.3) !important;
+    background-color: var(--color-btn-active-bkgd);
 }
 
 button.default:active {
-    background-color: #002275;
     border: 1px solid #002275;
+    background-color: #002275;
 }
 
 progress {
@@ -411,6 +411,7 @@ a:active {
     width: 100%;
     height: 100%;
     margin-top: 18px;
+    background-color: transparent;
     font: message-box;
     font-size: 15px;
     border: 0;
